SERVER-75880: Added isEmbeddedInIdField flag to disallow $-prefixed fields in _id field